--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ h1 {
   background-color: powderblue;
   font-weight:bold;
 }
+p {
+  text-align: center;
+  background-color: powderblue;
+  font-weight:bold;
+}
