--- a/style.css
+++ b/style.css
@@ -13,3 +13,8 @@ p {
   background-color: powderblue;
   font-weight:bold;
 }
+h2 {
+  text-align: center;
+  background-colour: powderblue;
+  font-weight: bold;
+}
