--- a/style.css
+++ b/style.css
@@ -15,6 +15,6 @@ p {
 }
 h2 {
   text-align: center;
-  background-colour: powderblue;
-  font-weight: bold;
+  background-color: powderblue;
+  font-weight:bold;
 }
